changing of html

--- a/AutoMaegler/Pages/Users/DeleteUser.cshtml
+++ b/AutoMaegler/Pages/Users/DeleteUser.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<h1 style="color: white">Sletning Af Bruger Bekræftelse</h1>
+<h1 style="color: black">Sletning Af Bruger Bekræftelse</h1>
 <div class="alert alert-danger">
     <h5>Er du sikker på, at du vil slette denne bruger?</h5>
     <form method="post">
