--- a/AutoMaegler/Pages/Users/Admin/CreateCustomer.cshtml
+++ b/AutoMaegler/Pages/Users/Admin/CreateCustomer.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<h1 class="text-white">Opret Ny Bruger</h1>
+<h1 class="text-black">Opret Ny Kunde</h1>
 
 
 <hr class="bg-white" />
@@ -12,27 +12,27 @@
 
     
     <div class="form-group">
-        <label asp-for="@Model.Customer.FirstName" class="control-label text-white">Fornavn</label>
+        <label asp-for="@Model.Customer.FirstName" class="control-label text-black">Fornavn</label>
         <input asp-for="@Model.Customer.FirstName" class="form-control" />
         <span asp-validation-for="@Model.Customer.FirstName" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="@Model.Customer.LastName" class="control-label text-white">Efternavn</label>
+        <label asp-for="@Model.Customer.LastName" class="control-label text-black">Efternavn</label>
         <input asp-for="@Model.Customer.LastName" class="form-control" />
         <span asp-validation-for="@Model.Customer.LastName" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="@Model.Customer.Email" class="control-label text-white">Email</label>
+        <label asp-for="@Model.Customer.Email" class="control-label text-black">Email</label>
         <input asp-for="@Model.Customer.Email" class="form-control" />
         <span asp-validation-for="@Model.Customer.Email" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="@Model.Customer.Password" class="control-label text-white">Adgangskode</label>
+        <label asp-for="@Model.Customer.Password" class="control-label text-black">Adgangskode</label>
         <input asp-for="@Model.Customer.Password" type="password" class="form-control" />
         <span asp-validation-for="@Model.Customer.Password" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="@Model.Customer.PhoneNumber" class="control-label text-white">Telefonnummer</label>
+        <label asp-for="@Model.Customer.PhoneNumber" class="control-label text-black">Telefonnummer</label>
         <input asp-for="@Model.Customer.PhoneNumber" class="form-control" />
         <span asp-validation-for="@Model.Customer.PhoneNumber" class="text-danger"></span>
     </div>
