--- a/AutoMaegler/Pages/Users/Admin/GetAllUsers.cshtml
+++ b/AutoMaegler/Pages/Users/Admin/GetAllUsers.cshtml
@@ -23,8 +23,8 @@
 
 @if (Model.FilteredUsers != null && Model.FilteredUsers.Any())
 {
-    <h3 class="mt-4 text-white">Søgeresultater</h3>
-    <table class="table table-striped text-white">
+    <h3 class="mt-4 text-black">Søgeresultater</h3>
+    <table class="table table-striped text-black">
         <thead>
             <tr>
                 <th>Fornavn</th>
@@ -42,7 +42,7 @@
                 var isCustomer = user is Customer;
                 var isEmployee = user is Employee;
 
-                <tr class="text-white">
+                <tr class="text-black">
                     <td>@user.FirstName</td>
                     <td>@user.LastName</td>
                     <td>@user.Email</td>
@@ -51,8 +51,8 @@
                     <td>@(isEmployee ? ((Employee)user).Type: "")</td>
                    
                     <td>
-                        <a class="btn btn-primary btn-sm" asp-page="/Users/EditUser" asp-route-id="@user.Id" asp-route-userType="@user.GetType().Name">Edit</a>
-                        <a class="btn btn-danger btn-sm" asp-page="/Users/DeleteUser" asp-route-id="@user.Id" asp-route-userType="@user.GetType().Name">Delete</a>
+                        <a class="btn btn-primary btn-sm" asp-page="/Users/EditUser" asp-route-id="@user.Id" asp-route-userType="@user.GetType().Name">Rediger</a>
+                        <a class="btn btn-danger btn-sm" asp-page="/Users/DeleteUser" asp-route-id="@user.Id" asp-route-userType="@user.GetType().Name">Slet</a>
                     </td>
                 </tr>
             }
@@ -62,32 +62,30 @@
 else
 {
 
-    <div style="display: flex; gap: 50px; align-items: flex-start; color:white">
+    <div style="display: flex; gap: 50px; align-items: flex-start; color:black">
         <div>
-            <h3 style="color: white">Kunder</h3>
+            <h3 style="color: black">Kunder</h3>
             <table class="table table-striped text-white">
-                <thead class="text-white">
-                    <tr class="text-white">
+                <thead class="text-black">
+                    <tr class="text-black">
                         <th>Fornavn</th>
                         <th>Efternavn</th>
                         <th>Email</th>
-                        
                         <th>Telefonnummer</th>
                         <th>Handlinger</th>
                     </tr>
                 </thead>
-                <tbody class="text-white">
-                    @foreach (var customer in Model.UserService.Customers)
+                <tbody class="text-black">
+                    @foreach (Customer customer in Model.UserService.Customers)
                     {
-                        <tr class="text-white">
+                        <tr class="text-black">
                             <td>@customer.FirstName</td>
                             <td>@customer.LastName</td>
                             <td>@customer.Email</td>
-                           
                             <td>@customer.PhoneNumber</td>
                             <td>
-                                <a class="btn btn-primary btn-sm" asp-page="/Users/EditUser" asp-route-id="@customer.Id" asp-route-userType="Customer">Edit</a>
-                                <a class="btn btn-danger btn-sm" asp-page="/Users/DeleteUser" asp-route-id="@customer.Id" asp-route-userType="Customer">Delete</a>
+                                <a class="btn btn-primary btn-sm" asp-page="/Users/EditCustomer" asp-route-id="@customer.Id" asp-route-userType="Customer">Rediger</a>
+                                <a class="btn btn-danger btn-sm" asp-page="/Users/DeleteUser" asp-route-id="@customer.Id" asp-route-userType="Customer">Slet</a>
                             </td>
                         </tr>
                     }
@@ -96,9 +94,9 @@ else
         </div>
 
         <div>
-            <h3 style="color:white">Medarbejdere</h3>
-            <table class="table table-striped text-white">
-                <thead class="text-white">
+            <h3 style="color:black">Medarbejdere</h3>
+            <table class="table table-striped text-black">
+                <thead class="text-black">
                     <tr>
                         <th>Fornavn</th>
                         <th>Efternavn</th>
@@ -107,17 +105,17 @@ else
                         <th>Handlinger</th>
                     </tr>
                 </thead>
-                <tbody class="text-white">
-                    @foreach (var employee in Model.UserService.Employees)
+                <tbody class="text-black">
+                    @foreach (Employee employee in Model.UserService.Employees)
                     {
-                        <tr class="text-white">
+                        <tr class="text-black">
                             <td>@employee.FirstName</td>
                             <td>@employee.LastName</td>
                             <td>@employee.Email</td>
                             <td>@employee.Type</td>
                             <td>
-                                <a class="btn btn-primary btn-sm" asp-page="/Users/EditUser" asp-route-id="@employee.Id" asp-route-userType="Employee">Edit</a>
-                                <a class="btn btn-danger btn-sm" asp-page="/Users/DeleteUser" asp-route-id="@employee.Id" asp-route-userType="Employee">Delete</a>
+                                <a class="btn btn-primary btn-sm" asp-page="/Users/EditEmployee" asp-route-id="@employee.Id" asp-route-userType="Employee">Rediger</a>
+                                <a class="btn btn-danger btn-sm" asp-page="/Users/DeleteUser" asp-route-id="@employee.Id" asp-route-userType="Employee">Slet</a>
                             </td>
                         </tr>
                     }
