--- a/AutoMaegler/Pages/Users/LogIn/LogInPage.cshtml
+++ b/AutoMaegler/Pages/Users/LogIn/LogInPage.cshtml
@@ -9,19 +9,19 @@
     </div>
     <form method="post">
         <div class="form-group">
-            <label asp-for="UserName" class="col-form-label text-white"></label>
+            <label asp-for="UserName" class="col-form-label text-black"> Brugernavn</label>
             <div>
                 <input asp-for="UserName" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Password" class="col-form-label text-white"></label>
+            <label asp-for="Password" class="col-form-label text-black"> Adgangskode</label>
             <div>
                 <input asp-for="Password" />
             </div>
         </div>
         <div class="form-group mt-1">
-            <button class="btn btn-outline-light">Log in</button>
+            <button class="btn btn-outline-light text-black">Log ind</button>
         </div>
     </form>
 </div>
