changing names added admin car page changed Interface for carservice added searchcar() added Getbuycar() added GetLeasingcar()

--- a/AutoM_2s-main/AutoMaegler/Pages/Cars/Car.cshtml
+++ b/AutoM_2s-main/AutoMaegler/Pages/Cars/Car.cshtml
@@ -96,7 +96,7 @@
     <p>Årgang: @Model.Car.ModelYear | Kilometerstand: @Model.Car.Mileage.ToString("N0") km | @Model.Car.Fuel | @Model.Car.MotorSize</p>
 
     <table class="specs">
-        <tr><th>Type af bil</th><td>@Model.Car.Type</td></tr>
+        <tr><th>Type af bil</th><td>@Model.Car.TypeOfCar</td></tr>
         <tr><th>Mærke</th><td>@Model.Car.Brand</td></tr>
         <tr><th>Model</th><td>@Model.Car.Model</td></tr>
         <tr><th>Farve</th><td>@Model.Car.Color</td></tr>
