--- a/AutoM_2s-main/AutoMaegler/Pages/Cars/CreateCar.cshtml
+++ b/AutoM_2s-main/AutoMaegler/Pages/Cars/CreateCar.cshtml
@@ -31,9 +31,9 @@
 
 <form method="post">
 	<div class="form-group">
-		<label asp-for="Car.Type" class="control-lable"></label>
-		<input asp-for="Car.Type" class="form-control" />
-		<span asp-validation-for="Car.Type" class="text-danger"></span>
+		<label asp-for="Car.TypeOfCar" class="control-lable"></label>
+		<input asp-for="Car.TypeOfCar" class="form-control" />
+		<span asp-validation-for="Car.TypeOfCar" class="text-danger"></span>
 	</div>
 	<div class="form-group">
 		<label asp-for="Car.Model" class="control-lable"></label>
@@ -133,6 +133,11 @@
 		<label asp-for="Car.Status" class="control-label"></label>
 		<input asp-for="Car.Status" class="form-control" />
 		<span asp-validation-for="Car.Status" class="text-danger"></span>
+	</div>
+	<div class="form-group">
+		<label asp-for="Car.ForSale" class="control-label"></label>
+		<input asp-for="Car.ForSale" class="form-check-input" type="checkbox" />
+		<span asp-validation-for="Car.ForSale" class="text-danger"></span>
 	</div>
 
 	<p>
