--- a/AutoM_2s-main/AutoMaegler/Pages/Cars/EditCar.cshtml
+++ b/AutoM_2s-main/AutoMaegler/Pages/Cars/EditCar.cshtml
@@ -9,9 +9,9 @@
 		<input asp-for="Car.Id" class="form-control" readonly="@(true)" />
 	</div>
 	<div class="form-group">
-		<label asp-for="Car.Type" class="control-lable"></label>
-		<input asp-for="Car.Type" class="form-control" />
-		<span asp-validation-for="Car.Type" class="text-danger"></span>
+		<label asp-for="Car.TypeOfCar" class="control-lable"></label>
+		<input asp-for="Car.TypeOfCar" class="form-control" />
+		<span asp-validation-for="Car.TypeOfCar" class="text-danger"></span>
 	</div>
 	<div class="form-group">
 		<label asp-for="Car.Brand" class="control-lable"></label>
