--- a/AutoM_2s-main/AutoMaegler/Pages/Users/LogIn/LogInPage.cshtml
+++ b/AutoM_2s-main/AutoMaegler/Pages/Users/LogIn/LogInPage.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             <label asp-for="Password" class="col-form-label text-black"> Adgangskode</label>
             <div>
-                <input asp-for="Password" />
+                <input asp-for="Password" type="password" />
             </div>
         </div>
         <div class="form-group mt-1">
