created image and added metode too the createcar

--- a/AutoM_2s-main/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoM_2s-main/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AutoMaegler.styles.css" asp-append-version="true" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100" style="background-color: ghostwhite;">
         <nav style="background-color: #00002B;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
