added Car.cshtml out commented image in all car stuff (car stuff working)

--- a/AutoM_2s-main/AutoMaegler/Pages/Cars/CreateCar.cshtml
+++ b/AutoM_2s-main/AutoMaegler/Pages/Cars/CreateCar.cshtml
@@ -2,7 +2,7 @@
 @model AutoMaegler.Pages.Cars.CreateCarModel
 @{
 }
-
+@* 
 <section>
 	<h3>Upload billede til bilen</h3>
 
@@ -27,7 +27,7 @@
 	{
 		<img src="@Model.UploadedImagePath" alt="Uploaded Car Image" style="max-width: 300px; margin-top: 10px;" />
 	}
-</section>
+</section> *@
 
 <form method="post">
 	<div class="form-group">
