CreateOrder: property names change. and anotations.

--- a/AutoM_2s-main/AutoMaegler/Pages/Order/CreateOrder.cshtml
+++ b/AutoM_2s-main/AutoMaegler/Pages/Order/CreateOrder.cshtml
@@ -21,39 +21,39 @@
             <span asp-validation-for="Depositum" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="startYear" class="control-label"></label>
-            <input asp-for="startYear" class="form-control" />
-            <span asp-validation-for="startYear" class="text-danger"></span>
+            <label asp-for="StartYear" class="control-label"></label>
+            <input asp-for="StartYear" class="form-control" />
+            <span asp-validation-for="StartYear" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="startMonth" class="control-label"></label>
-            <input asp-for="startMonth" class="form-control" />
-            <span asp-validation-for="startMonth" class="text-danger"></span>
+            <label asp-for="StartMonth" class="control-label"></label>
+            <input asp-for="StartMonth" class="form-control" />
+            <span asp-validation-for="StartMonth" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="startDay" class="control-label"></label>
-            <input asp-for="SaleDay" class="form-control" />
-            <span asp-validation-for="startDay" class="text-danger"></span>
+            <label asp-for="StartDay" class="control-label"></label>
+            <input asp-for="StartDay" class="form-control" />
+            <span asp-validation-for="StartDay" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="endYear" class="control-label"></label>
-            <input asp-for="endYear" class="form-control" />
-            <span asp-validation-for="endYear" class="text-danger"></span>
+            <label asp-for="EndYear" class="control-label"></label>
+            <input asp-for="EndYear" class="form-control" />
+            <span asp-validation-for="EndYear" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="endMonth" class="control-label"></label>
-            <input asp-for="endMonth" class="form-control" />
-            <span asp-validation-for="endMonth" class="text-danger"></span>
+            <label asp-for="EndMonth" class="control-label"></label>
+            <input asp-for="EndMonth" class="form-control" />
+            <span asp-validation-for="EndMonth" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="endDay" class="control-label"></label>
-            <input asp-for="endDay" class="form-control" />
-            <span asp-validation-for="endDay" class="text-danger"></span>
+            <label asp-for="EndDay" class="control-label"></label>
+            <input asp-for="EndDay" class="form-control" />
+            <span asp-validation-for="EndDay" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="monthlyPayment" class="control-label"></label>
-            <input asp-for="monthlyPayment" class="form-control" />
-            <span asp-validation-for="monthlyPayment" class="text-danger"></span>
+            <label asp-for="MonthlyPayment" class="control-label"></label>
+            <input asp-for="MonthlyPayment" class="form-control" />
+            <span asp-validation-for="MonthlyPayment" class="text-danger"></span>
         </div>
     }
     @if (Model.SelectedOrderType == Models.Order.OrderType.Buy)
